services/jackett/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jackett
  namespace: default
  labels:
    app: jackett
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jackett
  template:
    metadata:
      labels:
        app: jackett
    spec:
      containers:
        - image: lscr.io/linuxserver/jackett:latest
          imagePullPolicy: Always
          name: sickchill
          resources: {}
          ports:
            - name: jackett
              containerPort: 9117
          livenessProbe:
            httpGet:
              path: /
              port: jackett
            initialDelaySeconds: 60
            periodSeconds: 20
          volumeMounts:
            - name: host-disk1
              mountPath: /config
              subPath: jackett
          # - mountPath: /downloads/disk2
          #   name: nfs-vol-disk2
          #   subPath: downloads
          # - mountPath: /downloads/disk3
          #   name: nfs-vol-disk3
          #   subPath: downloads
          # - mountPath: /tv/disk2
          #   name: nfs-vol-disk2
          #   subPath: tv
          # - mountPath: /tv/disk3
          #   name: nfs-vol-disk3
          #   subPath: tv
      volumes:
        - name: host-disk1
          hostPath:
            path: /disk1
        # - name: nfs-vol-disk2
        #   nfs:
        #     server: 192.168.1.2
        #     path: /disk2
        # - name: nfs-vol-disk3
        #   nfs:
        #     server: 192.168.1.2
        #     path: /disk3
      restartPolicy: Always
status: {}
