services/jackett/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: jackett
  namespace: default
spec:
  selector:
    app: jackett
  ports:
    - port: 80
      targetPort: jackett
